--- a/package.json
+++ b/package.json
@@ -8,8 +8,39 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
+    "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/styles": "^4.11.1",
+    "@material-ui/utils": "^4.10.2",
+    "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.21.0",
+    "axios-hooks": "^2.2.0",
+    "bcrypt": "^5.0.0",
+    "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
+    "express": "^4.17.1",
+    "md5": "^2.3.0",
+    "moment": "^2.29.1",
     "next": "10.0.4",
+    "node-sass": "^5.0.0",
+    "nuka-carousel": "^4.7.4",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-bootstrap": "^1.4.0",
+    "react-burger-menu": "^2.7.1",
+    "react-chartjs-2": "^2.11.1",
+    "react-clear-cache": "^1.4.11",
+    "react-dev-utils": "^11.0.1",
+    "react-dom": "17.0.1",
+    "react-icons": "^4.1.0",
+    "react-private-route": "^1.1.2",
+    "react-push-menu": "^3.1.2",
+    "react-refresh": "^0.8.3",
+    "react-router-dom": "^5.2.0",
+    "universal-cookie": "^4.0.4"
   }
 }
