--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev ",
+    "build": "next build && next export -o CAS/",
     "start": "next start"
   },
   "dependencies": {
@@ -22,11 +22,13 @@
     "axios-hooks": "^2.2.0",
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.3",
+    "build": "^0.1.4",
     "chart.js": "^2.9.4",
     "express": "^4.17.1",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "next": "10.0.4",
+    "next-export-api": "^0.1.11",
     "node-sass": "^5.0.0",
     "nuka-carousel": "^4.7.4",
     "react": "17.0.1",
@@ -34,6 +36,8 @@
     "react-burger-menu": "^2.7.1",
     "react-chartjs-2": "^2.11.1",
     "react-clear-cache": "^1.4.11",
+    "react-component-countdown-timer": "^0.1.8",
+    "react-countdown": "^2.3.1",
     "react-dev-utils": "^11.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
@@ -41,6 +45,7 @@
     "react-push-menu": "^3.1.2",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
+    "react-timer": "^1.1.1",
     "universal-cookie": "^4.0.4"
   }
 }
